--- a/gb/9/6/27/n2571056.md
+++ b/gb/9/6/27/n2571056.md
@@ -9,103 +9,73 @@
 <p>克雷特火山口湖位于美国俄勒冈州（Oregon）南部的克雷特湖国家公园内。周长约五十公里，据资料记载，大约是在七千七百年前马札马火山喷发后所形成克雷特这巨大火山口湖。 </p>
 <p>熔岩冷却后封住了火山底，因而形成了一个大型的碗状火山口。千百年来，火山口填满降雨及融化的雪水。湖面平均高度为海平面 6173英尺，最深处距离湖面约 1943尺，长六哩，轮廓近似圆形。是美国境内第二深的大湖，也是全世界第七深的湖泊。</p>
 <p>火山口湖四周群山环绕，视野辽阔，湖水以灿烂见底的蔚蓝闻名全美，曾被称为“世界上最蓝的湖”。因为水分子只反射阳光的蓝色光，其透视度相当高，约有 40公尺深的可视度，由湖岸俯视，可以清楚看见湖底。湖中有座“巫师岛”是后来才出现的火山口。</p>
+<p><!--image v 1.0--></p>
 <div style="line-height: 90%; text-align: center;">
 	<ahref=" https://www.epochtimes.com/assets/uploads/2009/08/906261050401758-450x302.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">美国克雷特火山口湖蔚蓝的湖水 (维基百科)</span></div>
-<p><!--image v 1.0--></p>
+<p><!-- --></p>
 <table border=0 align=center>
 <tr valign=top>
-	<ahref=" https://www.epochtimes.com/assets/uploads/2009/08/906261050341758-450x300.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">白云围绕着克雷特火山口湖。 (维基百科)</span></div>
 <td>
-<div style="line-height: 90%; text-align: center;">
-	<ahref=" https://www.epochtimes.com/assets/uploads/2009/08/906261050351758-450x299.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">白云倒映在湛蓝的克雷特火山口湖湖面上。<br /> (维基百科)</span></div>
+	<ahref=" https://www.epochtimes.com/assets/uploads/2009/08/906261050341758-450x300.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">白云围绕着克雷特火山口湖。 (维基百科)</span></div>
 </td>
+	<ahref=" https://www.epochtimes.com/assets/uploads/2009/08/906261050351758-450x299.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">白云倒映在湛蓝的克雷特火山口湖湖面上。<br /> (维基百科)</span></div>
 </tr>
 </table>
-<p><!-- --></p>
 <p><B>林加尼火山口湖 </B> (Rinjani Crater Lake) </p>
 <p>林加尼火山是印尼境内最高的火山，位于龙目岛上，它以其灵毓之美广被印尼国内居民及国外游客所尊崇的一座圣山，山顶之火山湖尤为壮观，镇日烟霏缭绕更添几分神秘，国际各知名媒体之地理旅游频道经常来此拍摄火山湖壮丽景观。</p>
 <p>林加尼火山是一个神圣的地方，据说是众神居所。每年有数万人到火山口湖来朝圣。朝圣者祭祀泉水，热热的温泉水具有疗效。</p>
 	<ahref=" https://www.epochtimes.com/assets/uploads/2009/08/906261050381758-450x300.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">印尼林加尼火山口湖烟霏缭绕更添几分神秘。 (Ulet Ifansasti/Getty Images)</span></div>
-<p><!--image v 1.0--></p>
-<div style="line-height: 90%; text-align: center;">
 	<ahref=" https://www.epochtimes.com/assets/uploads/2009/08/906261050371758-450x300.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">印尼林加尼火山口湖 (Ulet Ifansasti/Getty Images)</span></div>
-<td>
 	<ahref=" https://www.epochtimes.com/assets/uploads/2009/08/906261050361758-450x300.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">印尼林加尼火山口湖壮丽景观。<br />(Ulet Ifansasti/Getty Images)</span></div>
-</td>
-<p><!-- --></p>
 <p><B>皮纳图博火山口湖 </B> (Pinatubo Crater_Lake) </p>
 <p>皮纳图博火山是菲律宾 22座活火山之一，位于首都马尼拉北 90公里处。 1991年，皮纳图博曾有过一次喷发，当时大量火山灰、熔岩流和有毒气体从火山口喷出，造成 800余人死亡。这次剧烈喷发留下一块大约 5.4平方公里的凹地，渐渐就形成了如今的火山口湖。</p>
-<table border=0 align=center>
-<tr valign=top>
-<div style="line-height: 90%; text-align: center;">
 	<ahref=" https://www.epochtimes.com/assets/uploads/2009/08/906261050281758-450x306.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">凝望菲律宾皮纳图博火山口湖的先生。 (AFP/Getty Images)</span></div>
-<td>
 	<ahref=" https://www.epochtimes.com/assets/uploads/2009/08/906261050301758-450x305.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">菲律宾皮纳图博火山口湖湖边搭着帐蓬。<br />(CECIL MORELLA/AFP/Getty Images)</span></div>
-</td>
-</tr>
-</table>
 <p><B>鲁瓦佩胡火山口湖 </B> (Ruapehu Crater_Lake)</p>
 <p>鲁瓦佩胡火山海拔 2797米，是新西兰北岛最高峰，为圆锥型成层间歇火山，其顶部有直径 1.5公里的暂熄火山口湖。 2007年 3月火山口湖决堤后，曾引发泥石流。</p>
-<p><!--image v 1.0--></p>
-<div style="line-height: 90%; text-align: center;">
 	<ahref=" https://www.epochtimes.com/assets/uploads/2009/08/906261050291758.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">新西兰鲁瓦佩胡火山口湖 (Ross Setford/Getty Images)</span></div>
-<p><!-- --></p>
 	<ahref=" https://www.epochtimes.com/assets/uploads/2009/08/906261050311758-450x300.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">新西兰鲁瓦佩胡山火山口湖 (Phil Walter/Getty Images)</span></div>
-<td>
-<div style="line-height: 90%; text-align: center;">
 	<ahref=" https://www.epochtimes.com/assets/uploads/2009/08/906261050321758-450x300.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">新西兰鲁瓦佩胡火山口湖 (Phil Walter/Getty Images)</span></div>
-</td>
 <p><B>卡瓦夷真火山口湖 </B> (Kawah Ijen Crater Lake) </p>
 <p>印尼东爪哇卡瓦夷真火山口湖的黄绿色硫磺湖，非常壮观美丽，位于海拔 2148公尺处，并且被火山口壁所包围，面积约有 134平方公里左右，感觉好像有 400个足球场那样大。由于有大量硫磺喷出，因此工人都到这里采集湖旁边的硫磺，每天可以从中获取 80公斤以上的硫磺。</p>
-<p><!--image v 1.0--></p>
-<table border=0 align=center>
-<tr valign=top>
 	<ahref=" https://www.epochtimes.com/assets/uploads/2009/08/906261050411758-450x300.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">印尼卡瓦夷真火山口湖 (维基百科)</span></div>
-<td>
-<div style="line-height: 90%; text-align: center;">
 	<ahref=" https://www.epochtimes.com/assets/uploads/2009/08/906261050391758-450x300.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">印尼工人采集卡瓦夷真火山口湖旁边的硫磺。<br />(Ulet Ifansasti/Getty Images)</span></div>
-</td>
-</tr>
-</table>
-<p><!-- --></p>
 <p><embed src="http://www.youmaker.com/v.swf" width="450" b="358" bgcolor="#FFFFFF" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer" allowFullScreen="true"flashvars="file=http://www.youmaker.com/video/v%3Fid%3Ded2a29e8f64546af94b6097f448cc35d001%26nu%3Dnu&#038;showdigits=true&#038;overstretch=fit&#038;autostart=false&#038;rotatetime=12&#038;linkfromdisplay=false&#038;repeat=list&#038;shuffle=false&#038;&#038;showfsbutton=false&#038;fsreturnpage=&#038;fullscreenpage=" /> <br /><ahref=http://www.youmaker.com/video/sv?id=ed2a29e8f64546af94b6097f448cc35d001 >http://www.youmaker.com/</a></p>
 <p>视讯：美国俄勒冈州克雷特火山口湖湖水以灿烂见底的蔚蓝闻名全美。</p>
 <p><p><font color=#ffffff>(http://www.dajiyuan.com)</font></p>
-	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/6/7/6/n1375411.md#1">观光促销奏效 香港团闻风来</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/6/9/29/n1471309.md#1">新加坡旅展 台湾馆主题旅游再度受到欢迎</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/6/10/4/n1475911.md#1">新加坡旅展订单成长三成 台日韩中最受欢迎</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/6/10/17/n1489886.md#1">台北国际旅展11月3日揭幕  展场创纪录</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/29/n14360118.md#1">【摄影天地】吃野果子的红颈绿鸠 绿树丛中的惊喜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/11/n14368659.md#1">克罗埃西亚一日跳岛 寻找神秘“蓝洞”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/23/n14356453.md#1">【摄影天地】小斑扇尾鹟离巢记</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/7/n14366259.md#1">快闪克罗埃西亚最古老的城市─史普利特</a></li>
-<hr>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/4/n10761662.md#1" target="_blank">周晓辉：从崇祯皇帝救不了大明王朝说当下</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/15/n11115255.md#1" target="_blank">美国人权报告 中国章节一值得关注的进展</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/3/7/n11922778.md?dfh#1" target="_blank">了解法轮功：见证奇迹 解开生命奥秘</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/29/n10435561.md#1" target="_blank">罗思义：一个到死还相信共产党伟大的“学者”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/4/11/n7543764.md#1" target="_blank">军转干部感恩法轮大法给了第二次生命</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/8/n14367455.md#1">【未解之谜】石油的真相 取之不竭的能源？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/7/n14366679.md#1">美国梦的传承 港妈延续父辈善举回馈社区</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/11/n14368907.md#1">【未解之谜】巧合还是命中注定？改变历史的大风</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/26/n14358064.md#1">效职冥府的清朝进士吐露什么天机？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/4/n14364035.md#1">商人突然怦然心动 枯骨果然是稀世珍宝</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/15/n14371565.md#1">【时事金扫描】组新内阁 川普正安排一台大戏</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/15/n14371534.md#1">【财经非常道】马斯克当部长 整治官僚主义</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/31/n14361822.md#1">【环球直击】珠海撞人事件 继续引发国际关注</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/12/n14369816.md#1">沈舟：中共新型战斗机歼-35的疑问多多</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/12/n14369942.md#1">珠海驾车撞人案 受害者家属发帖讲述悲痛经历</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/13/n14370156.md#1">中共对珠海惨案下指令 分析：或借机严控全民</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/12/n14369579.md#1">《拥抱太阳的月亮》宋再临离世 享年39岁</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/12/n14369372.md#1">曾任反诈骗大使 林逸欣今卷诈骗案 无奈发文</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/12/n14369964.md#1">频道停更3年 大陆网红李子柒恢复更新登热搜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/13/n14370673.md#1">赵薇遭封杀逾三年 IG晒手转陀螺照引猜测</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/12/n14369915.md#1">赵又廷跪谢粉丝厚爱 结局瞬间反转笑翻全场</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/14/n14370984.md#1">洗衣粉和洗衣精有何不同？ 哪个比较好？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/12/n14369450.md#1">家中这项物品比马桶座脏15倍 你可能不知道</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/14/n14371382.md#1">Zwilling德国双立人清仓特卖 折扣高达75%</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/13/n14370289.md#1">专家：吃这些“疗愈食物”会让你心情更差</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/5/n14364614.md#1">养肺必读！中医教你日常生活养肺四大秘诀</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545556.md#1">【佳音时刻】中共最怕什么？王毅曝党国机密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545497.md#1">【军事情报局】歼-10竟然仿自以色列狮式战机</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545423.md#1">第27届台北电影奖完整名单 《大风之岛》摘首奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544299.md#1">饰《鱿鱼游戏3》反角 任时完粉丝数暴涨百万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544989.md#1">开饺子店被吐槽出餐慢 大陆演员谭凯直播致歉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14539807.md#1">简单穴位按摩与食疗 保您不再做“起夜家”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543550.md#1">美国独立日烟火秀 纽约五大区最佳观赏地</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/9/6/27/n2571056.htm">组图：美丽偶然的奇迹　火山口湖</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/9/6/27/n2571056.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
